tests/compile_errors/element_size_exceeds_cache_line_fails.rs
use lamellae::channel;

fn main() {
    let _ = channel!([u8; 65], 4);
}
